# osu-dreamer-cartography

./: .gitignore  README.md  pipeline_walkthrough.ipynb  pyproject.toml  run_gui.py
docs/: README.md  cross_validation.html  index.html  synthesis.html  track_a.html  track_b.html
docs/css/: heatmap.css  style.css
docs/data/: track_b_cv.json
docs/js/: app.js  heatmap.js  main.js
experiment/: README.md  run_analysis.py
experiment/checkpoints/: epoch=3-step=58000.ckpt
experiment/config/: latent_model.yml  latent_model_cv.yml
experiment/results/track_a/: track_a_results.json
experiment/scripts/: 01_build_index.py  02_extract_osz.py  03_build_registry.py  04_encode_9dim.py  05_track_a_analysis.py  06_encode_latent.py  07_track_b_analysis.py  08_synthesis.py
gui/: pipeline_runner.py  server.py
gui/static/: index.html
gui/static/css/: style.css
gui/static/js/: app.js  charts.js  dataset.js  results.js  runner.js  setup.js
osu_dreamer/modules/: muon.py
reference_results/: cv_comparison.json  synthesis.json  track_b.json
scripts/: 01_build_index.py  02_extract_osz.py  03_build_registry.py  04_encode_9dim.py  05_track_a_analysis.py  06_encode_latent.py  07_track_b_analysis.py  08_synthesis.py
