[project]
name = "osu-dreamer-cartography"
version = "0.1.0"
description = "Cross-mapper beatmap analysis: latent space cartography for ISMIR 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "jaxtyping>=0.2.37",
    "nnaudio>=0.3.3",
    "numpy>=1.26.0",
    "pytorch-lightning>=2.4",
    "scipy>=1.15.1",
    "tinytag>=2.0.0",
    "torch>=2.5.1",
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = [
    "beartype>=0.19.0",
    "ipykernel>=6.29.5",
    "librosa>=0.10.2.post1",
    "tensorboard>=2.18.0",
]
